# parview

./: .gitignore  .gitmodules  .whitesource  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: codeql-analysis.yml  linux-arm-release.yml  linux-release.yml  macos-11  macos-11.yml  macos-release.yml
ThreatDragonModels/Test threat model/: Test threat model.json
configure/: build-arrow-mac.sh  build-arrow.sh  macos-env.sh  sonarcloud.sh  ubuntu-env.sh
src/main/: main.cpp
src/main/util/: ParseParquet.cpp  ParseParquet.h
util/: ParseParquet.cpp  ParseParquet.h
